--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head></head>
-    <body>Hello word!
+    <body>
+        <div style="text-align:center"><h1>Hello World!</h1>
+        </div>
 
 
 
