--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head></head>
+        <meta charset="uft-8">
+        <title>JS Basics</title>
+        <link rel="stylesheet" type="text/css" href="/css/style.css"></style>
     <body>
-        <div style="text-align:center"><h1>Hello World!</h1>
-        </div>
+        <h1>Javascript Basics</h1>
+        <h1>JSON Objects</h1>
+        <h1>Javascript Statements</h1>
+        <h1>Javascript Operators</h1>
 
 
 
-        <script src="scripts.js"></script>
+
+
+
+        <script src="/js/arrays.js"></script>
+        <script src="data.json"></script>
+
     </body>
     </html>
