working with conditional statements, and examples

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>JSON Objects</h1>
         <h1>Javascript Statements</h1>
         <h1>Javascript Operators</h1>
+        <h1>conditionals</h1>
 
 
 
@@ -16,6 +17,7 @@
 
 
         <script src="/js/arrays.js"></script>
+        <script src="/js/conditionals.js"></script>
         <script src="data.json"></script>
 
     </body>
